updating neon button project

--- a/neon-btn/index.html
+++ b/neon-btn/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <section class="container">
-        <a href="#">
-            <span>Go</span>
+        <a class="neon-btn" href="#">
+            <span>Hover Here</span>
         </a>
     </section>
 
