updating card-flip code for deployment

--- a/card-flip/index.html
+++ b/card-flip/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <section class="container">
-    <div class="card">
+    <div class="card-flip">
       <div class="card-front"></div>
       <div class="card-back">
         <h2>
@@ -27,10 +27,10 @@
           </p>
         </div>
         <div class="card-icons">
-          <a href="#" class="icon git-icon" area-hidden="true">
+          <a href="#" class="icon " area-hidden="true">
             <ion-icon name="logo-github"></ion-icon>
           </a>
-          <a href="#" class="icon git-icon" area-hidden="true">
+          <a href="#" class="icon " area-hidden="true">
             <ion-icon name="logo-linkedin"></ion-icon>
           </a>
         </div>
