update double spinners for deployment

--- a/css_double_spinners_reversed/index.html
+++ b/css_double_spinners_reversed/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="loader">
+    <div class="double-loader">
         <div class="sub-loader"></div>
     </div>
 </body>
